# ets2-job-logger

./: .appveyor.yml  .drone.yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  conanfile.txt
.circleci/: config.yml
docs/: API.md  DEVELOPER.md  USER.md
docs/API/: v1.md
gui/: AboutDialog.cpp  AboutDialog.h  Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  Version.h.in  main.cpp  version.iss.in
gui/Logger/: JobSender.cpp  JobSender.h  PluginInstaller.cpp  PluginInstaller.h  PluginInstallerDefs.h.in  Settings.cpp  Settings.h
gui/base/: AboutDialog.cpp  AboutDialog.fbp  AboutDialog.h  MainWindow.cpp  MainWindow.fbp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.fbp  SettingsWindow.h
gui/resources/icon/: icon.rc
packaging/Windows/: InnoSetup.iss.in
plugin/: CMakeLists.txt  plugin.def
plugin/include/jobplugin/: Brand.h  Cargo.h  City.h  Company.h  Destination.h  Distance.h  Fine.h  IdName.h  Job.h  PluginDefs.h  Position.h  Serializable.h  Source.h  SourceDestination.h  Trailer.h  Truck.h  Version.h.in
plugin/src/: Cargo.cpp  Distance.cpp  Fine.cpp  IdName.cpp  Job.cpp  Logger.cpp  Logger.h  Position.cpp  SourceDestination.cpp  Trailer.cpp  Truck.cpp  main.cpp
tests/: CMakeLists.txt  Json_test.cpp
